--- a/views/linka.ejs
+++ b/views/linka.ejs
@@ -10,11 +10,11 @@
     <body>
         <div class="container">
             <h3>Linka pay</h3>
-            <form class="form-horizontal" method="POST" enctype="application/x-www-form-urlencoded" action="<%= action_url%>">
+            <form class="form-horizontal" method="POST" enctype="application/x-www-form-urlencoded" action="<%= action_url %>">
                 <div class="form-group">
                     <lable class="col-sm-2 control-label">Access token</lable>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="token" placeholder="token" name="token" VALUE="<%= token %>">
+                        <input type="text" class="form-control" id="x_access_token" placeholder="x_access_token" name="x_access_token" VALUE="<%= token %>">
                     </div>
                 </div>
                 <div class="form-group">
@@ -24,35 +24,50 @@
                     </div>
                 </div>
                 <!-- seller_wallet_address -->
+                <!--
                 <div class="form-group">
                     <lable class="col-sm-2 control-label">P2P거래 여부(Default : N)</lable>
                     <div class="col-sm-10">
                         <input type="text" class="form-control" id="p2p_yn" placeholder="p2p_yn" name="p2p_yn" VALUE="N">
                     </div>
                 </div>
+                -->
                 <div class="form-group">
                     <lable class="col-sm-2 control-label">PG 고객사의 결제 고유 아이디(주문PK)</lable>
                     <div class="col-sm-10">
                         <input type="text" class="form-control" id="partner_order_id" placeholder="partner_order_id" name="partner_order_id" VALUE="<%= partner_order_id %>">
                     </div>
                 </div>
-                <!-- goods_id -->
+                <div class="form-group">
+                    <lable class="col-sm-2 control-label">상품고유아이디</lable>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="goods_id" placeholder="goods_id" name="goods_id" VALUE="product01">
+                    </div>
+                </div>
                 <div class="form-group">
                     <lable class="col-sm-2 control-label">상품명</lable>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="goods_name"" placeholder="goods_name" name="goods_name" VALUE="모바일팝충전" ">
+                        <input type="text" class="form-control" id="goods_name" placeholder="goods_name" name="goods_name" VALUE="Mobile POP">
                     </div>
                 </div>
+                <div class="form-group">
+                    <lable class="col-sm-2 control-label">상품판매가</lable>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="goods_price" placeholder="goods_price" name="goods_price" VALUE="10000">
+                    </div>
+                </div>
+                <!--
                 <div class="form-group">
                     <lable class="col-sm-2 control-label">상품 판매가(기축자산 기준 수량)</lable>
                     <div class="col-sm-10">
                         <input type="text" class="form-control" id="goods_cc_quantity"" placeholder="goods_cc_quantity" name="goods_cc_quantity" VALUE="0.1">
                     </div>
                 </div>
+                -->
                 <div class="form-group">
-                    <lable class="col-sm-2 control-label">상품 결제에 사용되는 기축자산 종류(9999)</lable>
+                    <lable class="col-sm-2 control-label">상품 결제에 사용되는 기축토큰 종류(9999)</lable>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="goods_coin_idx"" placeholder="goods_coin_idx" name="goods_coin_idx" VALUE="9999">
+                        <input type="text" class="form-control" id="goods_coin_idx" placeholder="goods_coin_idx" name="goods_coin_idx" VALUE="1">
                     </div>
                 </div>
                 <!-- goods_img_path, goods_taxation_yn, goods_taxation_rate -->
@@ -62,35 +77,25 @@
                         <input type="text" class="form-control" id="currency_unit"" placeholder="currency_unit" name="currency_unit" VALUE="KRW">
                     </div>
                 </div>
+                <!--
                 <div class="form-group">
                     <lable class="col-sm-2 control-label">기축자산 1개에 대한 단위금액(결제/정산 통화 기준)</lable>
                     <div class="col-sm-10">
                         <input type="text" class="form-control" id="currency_price" placeholder="currency_price" name="currency_price" VALUE="10000">
                     </div>
                 </div>
-                <div class="form-group">
-                    <lable class="col-sm-2 control-label">사용자 고유 아이디</lable>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="user_id" placeholder="user_id" name="user_id" VALUE="prettyfly@korea.com">
-                    </div>
-                </div>
+                -->
                 <div class="form-group">
                     <lable class="col-sm-2 control-label">사용자와 연동된 지갑명(LT01)</lable>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="pg_wallet_type"" placeholder="pg_wallet_type" name="pg_wallet_type" VALUE="LT01">
+                        <input type="text" class="form-control" id="pg_wallet_type"" placeholder="pg_wallet_type" name="pg_wallet_type" VALUE="LW01">
                     </div>
                 </div>
                 <!-- user_wallet_address, user_wallet_balance -->
                 <div class="form-group">
-                    <lable class="col-sm-2 control-label">사용자의 지갑 주소</lable>
+                    <lable class="col-sm-2 control-label">사용자 고유 아이디</lable>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="user_wallet_address"" placeholder="user_wallet_address" name="user_wallet_address" VALUE="0x1234567890">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <lable class="col-sm-2 control-label">사용자의 지갑 내 기축자산 보유 수량</lable>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="user_wallet_balance"" placeholder="user_wallet_balance" name="user_wallet_balance" VALUE="9000">
+                        <input type="text" class="form-control" id="user_id" placeholder="user_id" name="user_id" VALUE="prettyfly@korea.com">
                     </div>
                 </div>
                 <div class="form-group">
