--- a/views/linka.ejs
+++ b/views/linka.ejs
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/css/bootstrap.min.css">
-        <script src="/js/bootstrap.min.js"></script>
         <script src="/js/jquery.js"></script>
+        <script src="/js/bootstrap.min.js"></script>
     </head>
     <body>
         <div class="container">
@@ -95,16 +95,16 @@
                 <div class="form-group">
                     <lable class="col-sm-2 control-label">사용자 고유 아이디</lable>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="user_id" placeholder="user_id" name="user_id" VALUE="prettyfly@korea.com">
+                        <input type="text" class="form-control" id="user_id" placeholder="user_id" name="user_id" VALUE="chris@kpcard.co.kr">
                     </div>
                 </div>
                 <div class="form-group">
                     <lable class="col-sm-2 control-label">Callback</lable>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="node_url" placeholder="node_url" name="node_url" VALUE="<%= base_url %>/callback">
+                        <input type="text" class="form-control" id="note_url" placeholder="note_url" name="note_url" VALUE="<%= base_url %>/callback">
                     </div>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="next_url" placeholder="next_url" name="next_url" VALUE="<%= base_url %>/next">
+                        <input type="text" class="form-control" id="next_url" placeholder="next_url" name="next_url" VALUE="<%= base_url %>/next/<%= partner_order_id %>">
                     </div>
                     <!-- sign_rul -->
                 </div>
@@ -115,10 +115,10 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <dov class="col-sm-offset-2 col-sm-10">
+                    <div class="col-sm-offset-2 col-sm-10">
                         <button type="submit" class="btn btn-default">Send</button>
                         <button type="reset" class="btn btn-default">Reset</button>
-                    </dov>
+                    </div>
                 </div>
             </form>
         </div>
